[gd_scene load_steps=4 format=2]

[ext_resource path="res://tom_running.png" type="Texture" id=1]
[ext_resource path="res://jerry_running.png" type="Texture" id=2]
[ext_resource path="res://Node2D.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="tom" type="Sprite" parent="."]
position = Vector2( 307.156, 282 )
scale = Vector2( 0.428517, 0.439604 )
texture = ExtResource( 1 )

[node name="jerry" type="Sprite" parent="."]
position = Vector2( 703, 296 )
scale = Vector2( 0.0741579, 0.123027 )
texture = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 460.0
margin_top = 15.0
margin_right = 972.0
margin_bottom = 232.0

[node name="start_tom" type="Button" parent="."]
margin_left = 38.0
margin_top = 16.0
margin_right = 194.0
margin_bottom = 57.0
text = "Run Tom!"

[node name="stop_tom" type="Button" parent="."]
margin_left = 224.0
margin_top = 17.0
margin_right = 383.0
margin_bottom = 59.0
text = "Stop Tom!"

[node name="start_jerry" type="Button" parent="."]
margin_left = 37.0
margin_top = 74.0
margin_right = 195.0
margin_bottom = 120.0
text = "Run Jerry!"

[node name="stop_jerry" type="Button" parent="."]
margin_left = 226.0
margin_top = 73.0
margin_right = 386.0
margin_bottom = 121.0
text = "Stop Jerry!"

[connection signal="pressed" from="start_tom" to="." method="_on_start_tom_pressed"]
[connection signal="pressed" from="stop_tom" to="." method="_on_stop_tom_pressed"]
[connection signal="pressed" from="start_jerry" to="." method="_on_start_jerry_pressed"]
[connection signal="pressed" from="stop_jerry" to="." method="_on_stop_jerry_pressed"]
